--- a/vistas.html
+++ b/vistas.html
@@ -2,7 +2,7 @@ texto <!DOCTYPE html>
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>iniciando</title>
   </head>
   <body>
 
