se modifica vistas.html a formato html5

--- a/Vista/vistas.html
+++ b/Vista/vistas.html
@@ -1,10 +1,11 @@
-texto <!DOCTYPE html>
-<html lang="es" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>iniciando</title>
-  </head>
-  <body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>html5</title>
+</head>
+<body>
         
-  </body>
+</body>
 </html>
